--- a/podstrony/dobiegania.html
+++ b/podstrony/dobiegania.html
@@ -46,6 +46,22 @@
         </div>
         <div class="main-div-categories">
             <div class="div-categories">
+                <img src="../images/na-lato/nike-zoomx-vaporfly.png" alt="footz_logo">
+                <p>NIKE <span class="models">ZOOMX VAPORFLY</span></p>
+                <a class="kup" target="_blank" href="https://sklepbiegacza.pl/nike-zoomx-vaporfly-next-2-cu4111-002.html?cd=16059063579&ad=134496784484&kd=&gclid=CjwKCAjwqauVBhBGEiwAXOepkaooFZtY57vZbPrQAjRfm7rB7GVCIW43dpsemwZYoU9Pbnf4fvMv2hoCMwsQAvD_BwE">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
+                <img src="../images/na-lato/nike-pegasus-trail-3.png" alt="footz_logo">
+                <p>NIKE <span class="models">PEGASUS TRAIL 3</span></p>
+                <a class="kup" target="_blank" href="https://www.zalando.pl/nike-performance-pegasus-trail-3-obuwie-do-biegania-szlak-mystic-tealdark-smoke-greyuniverse-goldwild-berryfossil-stoneturquoise-blue-n1242a262-l11.html?size=49.5&allophones=0&wmc=SEM480_NB_GO._6748070217_702382246_137314852548.&opc=2211&mpp=google|v1||pla-1445340888631||1031025||g|c||555137611421||pla|N1242A262-L110015000|1445340888631|1|&gclsrc=aw.ds&gclid=CjwKCAjwqauVBhBGEiwAXOepkaDS-xhBjkofo6CaM7qhHGoHYQOwYJOr8_kaAMXAFHECpIwvTp0u2RoCIFUQAvD_BwE">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
                 <img src="../images/na-lato/adidas-ultraboost-climacool-2.png" alt="footz_logo">
                 <p>ADIDAS ULTRABOOST <span class="models">CLIMACOOL 2</span></p>
                 <a class="kup" target="_blank" href="https://www.adidas.pl/ultraboost-climacool-2-dna-shoes/GZ0441.html">
@@ -62,9 +78,25 @@
                 </a>  
             </div>
             <div class="div-categories">
+                <img src="../images/na-lato/new-balance-fresh-foam-1080v11.png" alt="footz_logo">
+                <p>NEW BALANCE <span class="models">fresh foam 1080v11</span></p>
+                <a class="kup" target="_blank" href="https://nbsklep.pl/new_balance_fresh_foam_1080v11_m1080s11">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
                 <img src="../images/na-lato/adidas-originals-nmd-r1.png" alt="footz_logo">
                 <p>ADIDAS ORIGINALS <span class="models">NMD_R1</span></p>
                 <a class="kup" target="_blank" href="https://www.zalando.pl/adidas-originals-nmd_r1-sneakersy-niskie-core-blacksolar-red-ad115o11z-q11.html?size=36&allophones=0&wmc=SEM480_NB_GO._6748070217_702385882_137314852988.&opc=2211&mpp=google|v1||pla-1442533158449||1031025||g|c||555078498652||pla|AD115O11Z-Q110035000|1442533158449|1|&gclsrc=aw.ds&gclid=Cj0KCQjwhqaVBhCxARIsAHK1tiML9OSOS8bHP5ntpOHf7OAdqRGClPlXp0mg8XKbfBXUMXVjYDId5ysaArjpEALw_wcB">
+                <span class="material-symbols-outlined">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
+                <img src="../images/na-lato/under-armour-flow-velociti-wind.png" alt="footz_logo">
+                <p>UNDER ARMOUR <span class="models">FLOW VELOCITI WIND</span></p>
+                <a class="kup" target="_blank" href="https://top4running.pl/p/under-armour-ua-flow-velociti-wind-3023545-402">
                 <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
@@ -74,6 +106,14 @@
                 <p>ADIDAS TERREX <span class="models">TWO ULTRA</span></p>
                 <a class="kup" target="_blank" href="https://sportowysklep.pl/buty-adidas-terrex-two-ultra-parley-meskie-czarno-biale-cblack-ftwwht-syello-h69066.html?cd=1753126246&ad=68750024375&kd=&gclid=CjwKCAjwqauVBhBGEiwAXOepkSjNHlGRr84Ea0Zy_9tr3Gz8jLDa-0fd35e6ttEdjKtbVS0XcYbNuRoCv0wQAvD_BwE">
                 <span class="material-symbols-outlined">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
+                <img src="../images/na-lato/asics-novablast-2-sps.png" alt="footz_logo">
+                <p>ASICS <span class="models">NOVABLAST 2 SPS</span></p>
+                <a class="kup" target="_blank" href="https://www.asics.com/pl/pl-pl/novablast™-2-sps/p/1201A483-020.html?size=12&width=Standard&gclid=CjwKCAjwqauVBhBGEiwAXOepkWWltcYmxzATGstv3_4aoxOmm3aHoy1W-2vtjBU3u0ghl83VxKNFlBoC_XoQAvD_BwE">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
