--- a/podstrony/nalato.html
+++ b/podstrony/nalato.html
@@ -118,6 +118,14 @@
                 </a>  
             </div>
             <div class="div-categories">
+                <img src="../images/na-lato/nike-zoomx-vaporfly.png" alt="footz_logo">
+                <p>NIKE <span class="models">ZOOMX VAPORFLY</span></p>
+                <a class="kup" target="_blank" href="https://sklepbiegacza.pl/nike-zoomx-vaporfly-next-2-cu4111-002.html?cd=16059063579&ad=134496784484&kd=&gclid=CjwKCAjwqauVBhBGEiwAXOepkaooFZtY57vZbPrQAjRfm7rB7GVCIW43dpsemwZYoU9Pbnf4fvMv2hoCMwsQAvD_BwE">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
                 <img src="../images/na-lato/jordan-1-mid.png" alt="footz_logo">
                 <p>JORDAN 1 <span class="models">MID</span></p>
                 <a class="kup" target="_blank" href="https://www.nike.com/pl/t/buty-air-jordan-1-mid-QJTvQh/554724-371">
@@ -174,6 +182,14 @@
                 </a>  
             </div>
             <div class="div-categories">
+                <img src="../images/na-lato/nike-pegasus-trail-3.png" alt="footz_logo">
+                <p>NIKE <span class="models">PEGASUS TRAIL 3</span></p>
+                <a class="kup" target="_blank" href="https://www.zalando.pl/nike-performance-pegasus-trail-3-obuwie-do-biegania-szlak-mystic-tealdark-smoke-greyuniverse-goldwild-berryfossil-stoneturquoise-blue-n1242a262-l11.html?size=49.5&allophones=0&wmc=SEM480_NB_GO._6748070217_702382246_137314852548.&opc=2211&mpp=google|v1||pla-1445340888631||1031025||g|c||555137611421||pla|N1242A262-L110015000|1445340888631|1|&gclsrc=aw.ds&gclid=CjwKCAjwqauVBhBGEiwAXOepkaDS-xhBjkofo6CaM7qhHGoHYQOwYJOr8_kaAMXAFHECpIwvTp0u2RoCIFUQAvD_BwE">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
                 <img src="../images/na-lato/adidas-ultraboost-climacool-2.png" alt="footz_logo">
                 <p>ADIDAS ULTRABOOST <span class="models">CLIMACOOL 2</span></p>
                 <a class="kup" target="_blank" href="https://www.adidas.pl/ultraboost-climacool-2-dna-shoes/GZ0441.html">
@@ -185,6 +201,14 @@
                 <img src="../images/na-lato/nike-air-max-270.png" alt="footz_logo">
                 <p>NIKE AIR MAX <span class="models">270</span></p>
                 <a class="kup" target="_blank" href="https://www.zalando.pl/nike-sportswear-air-max-270-tenisowki-i-trampki-blackanthracitewhitesolar-red-ni112o00r-q11.html">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
+                <img src="../images/na-lato/new-balance-fresh-foam-1080v11.png" alt="footz_logo">
+                <p>NEW BALANCE <span class="models">fresh foam 1080v11</span></p>
+                <a class="kup" target="_blank" href="https://nbsklep.pl/new_balance_fresh_foam_1080v11_m1080s11">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
@@ -217,6 +241,22 @@
                 <img src="../images/na-lato/adidas-yeezy-boost-350.png" alt="footz_logo">
                 <p>ADIDAS YEEZY <span class="models">BOOST 350</span></p>
                 <a class="kup" target="_blank" href="https://lovelygrails.pl/products/Adidas-Yeezy-Boost-350-V2-Black-Red-Bred-p367990920?utm_source=GoogleFreeListings&utm_campaign=Kliken+-+Google+Shopping+-+PL+(1)&utm_campaign_id=992916&utm_ad_group_id=951183&utm_prod_id=367990920&utm_mobile=0">
+                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
+                <img src="../images/na-lato/under-armour-flow-velociti-wind.png" alt="footz_logo">
+                <p>UNDER ARMOUR <span class="models">FLOW VELOCITI WIND</span></p>
+                <a class="kup" target="_blank" href="https://top4running.pl/p/under-armour-ua-flow-velociti-wind-3023545-402">
+                <span class="material-symbols-outlined">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
+                <img src="../images/na-lato/asics-novablast-2-sps.png" alt="footz_logo">
+                <p>ASICS <span class="models">NOVABLAST 2 SPS</span></p>
+                <a class="kup" target="_blank" href="https://www.asics.com/pl/pl-pl/novablast™-2-sps/p/1201A483-020.html?size=12&width=Standard&gclid=CjwKCAjwqauVBhBGEiwAXOepkWWltcYmxzATGstv3_4aoxOmm3aHoy1W-2vtjBU3u0ghl83VxKNFlBoC_XoQAvD_BwE">
                 <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
