--- a/podstrony/natopie.html
+++ b/podstrony/natopie.html
@@ -49,7 +49,7 @@
                 <img src="../images/na-lato/jordan-1-mid.png" alt="footz_logo">
                 <p>JORDAN 1 <span class="models">MID</span></p>
                 <a class="kup" target="_blank" href="https://www.nike.com/pl/t/buty-air-jordan-1-mid-QJTvQh/554724-371">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -57,7 +57,7 @@
                 <img src="../images/na-lato/jordan-1-mid-se.png" alt="footz_logo">
                 <p>JORDAN 1 <span class="models">MID SE</span></p>
                 <a class="kup" target="_blank" href="https://www.snipes.pl/p/jordan-1_mid_se_%28ps%29_-black%2Funiversity_red%2Fwhite%2Fsmoke_grey-00013802066289.html?campaign=ap%2Fmp%2Faff%2F%21%21%21affid%21%21%21&utm_source=AWIN&utm_medium=affiliate&utm_campaign=dpl-affiliate_network-ns-AWIN_%21%21%21affid%21%21%21_awin_%21%21%21affid%21%21%21&utm_content=SNIPES%20PL%20Produktfeed&aaaid=62af6dd60476005c9333d92e&ext_publisher_id=%21%21%21affid%21%21%21&awc=26769_1655664086_151e3c853a597495e261b2c808c27442">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -65,7 +65,7 @@
                 <img src="../images/na-lato/jordan-1-retro-high-OG.png" alt="footz_logo">
                 <p>JORDAN 1 <span class="models">RETRO HIGHT OG</span></p>
                 <a class="kup" target="_blank" href="https://www.nike.com/pl/t/buty-air-jordan-1-retro-high-og-79vGWV/555088-161">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -73,7 +73,7 @@
                 <img src="../images/na-lato/jordan-1-low.png" alt="footz_logo">
                 <p>JORDAN 1 <span class="models">LOW</span></p>
                 <a class="kup" target="_blank" href="https://www.nike.com/pl/t/buty-meskie-air-jordan-1-low-9g1Rdg/553558-414">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -81,7 +81,7 @@
                 <img src="../images/na-lato/jordan-1-low-se.png" alt="footz_logo">
                 <p>JORDAN 1 <span class="models">LOW SE</span></p>
                 <a class="kup" target="_blank" href="https://www.nike.com/pl/t/buty-meskie-air-jordan-1-low-se-lFcs9M">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -89,7 +89,7 @@
                 <img src="../images/na-lato/jordan-max-aura-3.png" alt="footz_logo">
                 <p>JORDAN <span class="models">MAX AURA 3</span></p>
                 <a class="kup" target="_blank" href="https://www.zalando.pl/jordan-max-aura-3-sneakersy-wysokie-whiteuniversity-redblack-joc12n01q-a13.html?size=42.5&allophones=0&wmc=SEM480_NB_GO._6748070217_702385882_137314852988.&opc=2211&mpp=google|v1||pla-1442533158449||1011539||g|c||555078498652||pla|JOC12N01Q-A130090000|1442533158449|1|&gclsrc=aw.ds&gclid=Cj0KCQjwkruVBhCHARIsACVIiOyse7CujN2s-SJ7v3ophqmlvK0f4FAtMPeoNTft7aKwhJPWkFRB1UMaAr5kEALw_wcB">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -97,7 +97,7 @@
                 <img src="../images/na-lato/jordan-stay-loyal.png" alt="footz_logo">
                 <p>JORDAN <span class="models">STAY LOYAL</span></p>
                 <a class="kup" target="_blank" href="https://sklep.sizeer.com/nike-jordan-stay-loyal-meskie-sneakersy-szary-db2884-101?gclid=CjwKCAjwqauVBhBGEiwAXOepkRL09NQHcPTpeOBZVA1OPMotYtXsmp9F_89Xqzcy1LWhdSfv2ibNhhoC8GYQAvD_BwE">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -105,7 +105,7 @@
                 <img src="../images/na-lato/jordan-xxxvi.png" alt="footz_logo">
                 <p>JORDAN <span class="models">XXXVI</span></p>
                 <a class="kup" target="_blank" href="https://skstore.eu/pl/air-jordan-xxxvi-blacklaser-orange-deadly-pink-cz2650-002.html?cd=1509365023&ad=58449838512&kd=&gclid=CjwKCAjwqauVBhBGEiwAXOepkYjAgt-nJOyo0gygoN6ntoxX_krLpiQy9NfDa7e9DIW4mselzUcrdBoCHPMQAvD_BwE">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -113,7 +113,7 @@
                 <img src="../images/na-lato/jordan-delta-2.png" alt="footz_logo">
                 <p>JORDAN <span class="models">DELTA 2</span></p>
                 <a class="kup" target="_blank" href="https://www.zalando.pl/jordan-delta-2-sneakersy-niskie-blackuniversity-redoff-noirwhitesailmetallic-silver-joc15o002-q11.html">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -121,7 +121,7 @@
                 <img src="../images/na-lato/jordan-delta-2-se.png" alt="footz_logo">
                 <p>JORDAN <span class="models">DELTA 2 SE</span></p>
                 <a class="kup" target="_blank" href="https://www.nike.com/pl/t/buty-jordan-delta-2-se-FCxsZ2/DJ9843-004">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -129,7 +129,7 @@
                 <img src="../images/na-lato/jordan-series-es.png" alt="footz_logo">
                 <p>JORDAN <span class="models">Series ES</span></p>
                 <a class="kup" target="_blank" href="https://www.zalando.pl/jordan-series-obuwie-do-koszykowki-blackuniversity-redwhitesummit-white-joc43a050-q11.html?size=35.5&allophones=0&wmc=SEM480_NB_GO._6748070217_702385855_137314853268.&opc=2211&mpp=google|v1||pla-1442615911142||1011539||g|c||555008936382||pla|JOC43A050-Q11035Y000|1442615911142|1|&gclsrc=aw.ds&gclid=Cj0KCQjwhqaVBhCxARIsAHK1tiMFLGqewpevCTAXQIFWNcl0fhQi7DiZfPu6AeLCQlATrbasb2M6SzkaAje4EALw_wcB">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -137,7 +137,7 @@
                 <img src="../images/na-lato/jordan-why-not.5.png" alt="footz_logo">
                 <p>JORDAN <span class="models">WHY NOT.5?</span></p>
                 <a class="kup" target="_blank" href="https://www.zalando.pl/jordan-why-not-5-obuwie-do-koszykowki-blackwatermelonsapphiremint-foam-joc42a04a-q12.html">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -145,7 +145,7 @@
                 <img src="../images/na-lato/jordan zion 1.png" alt="footz_logo">
                 <p>JORDAN <span class="models">ZION 1</span></p>
                 <a class="kup" target="_blank" href="https://www.zalando.pl/jordan-zion-1-unisex-obuwie-do-koszykowki-blackwhitebright-crimsonamarilloblue-herohyper-violet-joc43a03i-q11.html">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -153,7 +153,7 @@
                 <img src="../images/na-lato/jordan-4-retro-military-black.png" alt="footz_logo">
                 <p>JORDAN 4 <span class="models">RETRO MILITARY BLACK</span></p>
                 <a class="kup" target="_blank" href="https://krissnkrs.com/produkt/air-jordan-4-retro-military-black/">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -161,7 +161,7 @@
                 <img src="../images/na-lato/jordan-one-take-3.png" alt="footz_logo">
                 <p>JORDAN <span class="models">ONE TAKE 3</span></p>
                 <a class="kup" target="_blank" href="https://www.forpro.pl/mezczyzni/obuwie/lifestyle/jordan-one-take-3-czarny-dc7701-001?gclid=CjwKCAjwqauVBhBGEiwAXOepkQvEcB1SR2T8EEPXwRvfPMGua32ncoI3FABIJpIV9tm1A7eEdgXfYRoClsEQAvD_BwE">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
